ADDED : Code to read or write data in json file.